test/expected/explain_fkrel_i.out
explain int f(x, ...)
                 ^
18: error: function prototypes not supported until C89
